# avatar_shell

./: .gitignore  .graphifyignore  README.md  config.py  main.py  pyproject.toml  setup_models.py
audio/: __init__.py  pipeline.py  vad.py
brain/: __init__.py  llm.py  normalizer.py  tts.py
memory/: __init__.py  engine.py
openspec/changes/archive/2026-05-23-clarification-window-realignment/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-23-conversational-drift-guard/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-23-dynamic-cadence-backoff/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-23-interactive-clarification-barrier/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-23-turn-handshake-memory-filter/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-23-windows-compatibility/: design.md  proposal.md  tasks.md
openspec/changes/dynamic-question-gating/: design.md  proposal.md  tasks.md
openspec/changes/dynamic-question-gating/specs/dynamic-question-gating/: spec.md
openspec/specs/clarification-window-realignment/: spec.md
openspec/specs/conversational-drift-guard/: spec.md
openspec/specs/dynamic-cadence-backoff/: spec.md
openspec/specs/interactive-clarification-barrier/: spec.md
openspec/specs/turn-synchronization-memory-filter/: spec.md
openspec/specs/windows-compatibility/: spec.md
scratch/: detect_genders.py  generate_wavs.py  inspect_tts.py  scan_all_speakers.py  search_voices_bin.py  test_voice.py
ui/: window.py
www/: index.html
(+6 files in other folders)
